feat: RelationalExpression completed